--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <!-- About Widget Begin -->
             <div class="widget widget_about">
                 <div class="widget-logo">
-                    <img src="assets/img/logo.png" data-rjs="2" alt="">
+                    <img src="Untitled.png" width="50" data-rjs="2" alt="">
                 </div>
 
                 <div class="about-content">
