--- a/index.html
+++ b/index.html
@@ -1703,7 +1703,7 @@
                                 <P>Cuteness you exquisite ourselves now end
                                 forfeited. Enquire ye without it garrets himself. Interest our nor received followed was.</P>
 
-                                <form action="https://themelooks.us13.list-manage.com/subscribe/post?u=79f0b132ec25ee223bb41835f&amp;id=f4e0e93d1d" method="post" name="mc-embedded-subscribe-form" target="_blank" class="newsletter-form">
+                                <form action="#" method="post" name="mc-embedded-subscribe-form" target="_blank" class="newsletter-form">
                                     <div class="theme-input-group">
                                         <input type="text" placeholder="Your Email">
                                         <button type="submit"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
