--- a/index.html
+++ b/index.html
@@ -1743,7 +1743,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="copyright-text text-center">
-                            <span><a href="#">0to1</a> &copy; Copyright 2019.All rights reserved.</span>
+                            <span><a href="#">0to1</a> &copy; Copyright 2023 Bleron Mexhuani.All rights reserved.</span>
                         </div>
                     </div>
                 </div>
